# algo-classifier

./: .gitignore  README.md  compare.py  pyproject.toml  requirements.txt
algo_classifier/: __init__.py  __main__.py  cli.py  data_loader.py
algo_classifier/baseline/: __init__.py  config.py  evaluate.py  features.py  predict.py  train.py
algo_classifier/optimized/: __init__.py  config.py  evaluate.py  features.py  predict.py  train.py
docs/: algo_tag_classifier.pptx  explanation.md  issues.md
