[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-classifier"
version = "0.1.0"
description = "Classificateur multi-label d'exercices Codeforces (8 tags algorithmiques)"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "lightgbm",
    "sentence-transformers",
]

[project.scripts]
algo-classifier = "algo_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["algo_classifier*"]
